<resources>
    <string name="app_name">Tripper</string>

    <!-- Bottom Navigation Bar -->
    <string name="home_label">Homepage</string>
    <string name="flights_label">Flights</string>
    <string name="bucketlist_label">Bucket List</string>
    <string name="docs_label">Documents</string>
    <string name="account_label">Account</string>

    <!--Homepage-->
    <string name = "home_widget_title">Current</string>

    <!--Homepage Top Widget-->
    <string name = "widget_heading1">SC to LDN</string>
    <string name = "widget_heading2">11:05 PM Tonight</string>
    <string name="widget_heading3">SCE Terminal 2</string>
    <string name="widget_pic_contentDesc">Search icon to act as a search button</string>

    <!--Homepage Recycler View Items-->
    <string name="text1">Top Bucket List Trips 2023</string>
    <string name="text2">Best Warm Winter Getaways</string>
    <string name="text3">Coziest Cabin Stays for Christmas.</string>
    <string name="text4">Best National Parks in U.S.</string>
    <string name="text5">European\'s Favorite Skii Destinations</string>
    <string name="text6">Top Bucket List Trips 2022</string>
    <string name="text7">Beachfront Resorts to Go with Friends!</string>
    <string name="text8">Most Iconic Cities Around The World</string>

    <!-- Login -->
    <string name="past_city_1">State College</string>
    <string name="cityDetail1">You have been to State College in December  1st, 2021</string>
    <string name="past_city_2">Portland</string>
    <string name="cityDetail2">You have been to Portland in March 11th, 2022</string>
    <string name="past_city_3">Ann Arbor</string>
    <string name="cityDetail3">You have been to Ann Arbor in June 27th, 2020</string>
    <string name="login_error_title">Unable to login</string>
    <string name="login_error_message">Please try again using the correct email or password</string>

    <!-- Documents -->
    <string name="i20_detail">Last i-20 form updated at 9.30PM Dec 11!</string>
    <string name="visa_detail">Last visa updated at 11.23PM Dec 10!</string>
    <string name="i94_detail">Last i-94 form updated at 5.30PM Dec 9!</string>
    <string name="camera_hint_text">Hint</string>
    <string name="camera_hint_message">You can scan your documents and upload!</string>

    <!-- Account -->
    <string name="acc_row1">Flying Dashboard</string>
    <string name="acc_row2">Personal Information</string>
    <string name="acc_row3">Payment Methods</string>
    <string name="acc_row4">Membership Information</string>
    <string name="acc_row5">Emergency Contacts</string>
    <string name="acc_row6">Help Center</string>
    <string name="login_text">You have logged in!</string>
    <string name="widget_checkin_button">Check In</string>
    <string name="acc_name">Jane Doe</string>
    <string name="backarrow_contentDesc">Back arrow icon to act as a back button</string>
    <string name="bucketlist_heading">"Cities You Have Visited: "</string>

</resources>