<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_homepage_icon"
        android:title="@string/home_label" />
    <item
        android:id="@+id/bucketlist_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_bucketlist_icon"
        android:title="@string/bucketlist_label"
        />
    <item
        android:id="@+id/flights_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_trip_icon"
        android:title="@string/flights_label" />
    <item
        android:id="@+id/docs_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_docs_icon"
        android:title="@string/docs_label" />
    <item
        android:id="@+id/account_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_account_icon"
        android:title="@string/account_label" />
</menu>