<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <!--fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/user__1_"
            app:layout_constraintBottom_toTopOf="@+id/accountName_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#D0142770"></ImageView>

        <RelativeLayout
            android:id="@+id/widget_tracker"
            android:layout_width="match_parent"
            android:layout_height="485dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/home_dashboard_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView5"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/acc_row1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:text="@string/acc_row1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/acc_row2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acc_row1_label"
                android:layout_alignStart="@+id/acc_row1_label"
                android:layout_marginTop="25dp"
                android:text="@string/acc_row2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/acc_row4_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acc_row3_label"
                android:layout_alignStart="@+id/acc_row3_label"
                android:layout_marginTop="25dp"
                android:text="@string/acc_row4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/acc_row5_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acc_row4_label"
                android:layout_alignStart="@+id/acc_row4_label"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/acc_row5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/acc_row6_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acc_row5_label"
                android:layout_alignStart="@+id/acc_row5_label"
                android:layout_marginTop="25dp"
                android:text="@string/acc_row6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/acc_row3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/acc_row2_label"
                android:layout_alignStart="@+id/acc_row2_label"
                android:layout_marginTop="25dp"
                android:text="@string/acc_row3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/accountName_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jane Doe"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>